@@ -315,7 +315,6 @@
     <ClCompile Include="MergeWizard.cpp" />
     <ClCompile Include="MergeWizardBasePage.cpp" />
     <ClCompile Include="MergeWizardOptions.cpp" />
-    <ClCompile Include="MergeWizardReintegrate.cpp" />
     <ClCompile Include="MergeWizardRevRange.cpp" />
     <ClCompile Include="MergeWizardStart.cpp" />
     <ClCompile Include="MergeWizardTree.cpp" />
@@ -641,7 +640,6 @@
     <ClInclude Include="MergeWizard.h" />
     <ClInclude Include="MergeWizardBasePage.h" />
     <ClInclude Include="MergeWizardOptions.h" />
-    <ClInclude Include="MergeWizardReintegrate.h" />
     <ClInclude Include="MergeWizardRevRange.h" />
     <ClInclude Include="MergeWizardStart.h" />
     <ClInclude Include="MergeWizardTree.h" />
